--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,15 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+[Aa]ssets/AssetStoreTools*
+[Ll]ibrary/
+[Ll]ocal[Cc]ache/
+[Tt]emp/
+[Uu]nityGenerated/
+# file on crash reports
+sysinfo.txt
+# Unity3D generated meta files
+*.pidb.meta
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
