--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,6 @@ ExportedObj/
 *.pidb.meta
 *.pdb.meta
 *.mdb.meta
-
 # Unity3D generated file on crash reports
 sysinfo.txt
 
@@ -67,3 +66,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+*.log
